--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
         </div>
     </div>
 
+    <hr>
+
+    <div class="container py-5">
+        <div class="bg-secondary bg-opacity-10 p-4">
+            <div class="row align-items-center">
+                <div class="col-8 col-md-9">
+                    <div class="h5 text-primary-emphasis">Creative & Unique <span class="fw-bold">Sixteen</span> Products</div>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laborum, exercitationem delectus obcaecati tempora doloremque!</div>
+                </div>
+                <div class="col-4 col-md-3 text-end">
+                    <div class="btn btn-danger">Purchase Now</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
