--- a/index.html
+++ b/index.html
@@ -283,41 +283,44 @@
         </script>
     </div>
 
-    <div class="container py-3">
+    <div class="container">
         <div class="h2">About Sixteen Clothing</div>
 
         <hr>
 
-        <div class="row justify-content-center py-3 g-5">
-            <div class="col-md-6">
-                <div class="h5 text-primary-emphasis">Looking for the best products?</div>
-                <div><span class="text-primary">Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Cumque dolorem eos quasi similique inventore optio quod <span class="text-primary">nostrum possimus</span> enim saepe!</div>
-                <ul class="py-3 lh-lg">
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
-                </ul>
-                <div class="btn btn-danger">Read More</div>
-            </div>
-            <div class="col-10 col-md-6">
-                <div><img src="img/feature-image.jpg" alt="" class="img-fluid"></div>
+        <div class="pt-4">
+            <div class="row justify-content-center align-items-center g-5">
+                <div class="col-md-6">
+                    <div class="h5 text-primary-emphasis">Looking for the best products?</div>
+                    <div><span class="text-primary">Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Cumque dolorem eos quasi similique inventore optio quod <span class="text-primary">nostrum possimus</span> enim saepe!</div>
+                    <ul class="py-3 lh-lg">
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                        <li>Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                    <div class="btn btn-danger">Read More</div>
+                </div>
+                <div class="col-10 col-md-6">
+                    <div><img src="img/feature-image.jpg" alt="" class="img-fluid"></div>
+                </div>
             </div>
         </div>
     </div>
 
-    <hr>
-
     <div class="container py-5">
-        <div class="bg-secondary bg-opacity-10 p-4">
-            <div class="row align-items-center">
-                <div class="col-8 col-md-9">
-                    <div class="h5 text-primary-emphasis">Creative & Unique <span class="fw-bold">Sixteen</span> Products</div>
-                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laborum, exercitationem delectus obcaecati tempora doloremque!</div>
-                </div>
-                <div class="col-4 col-md-3 text-end">
-                    <div class="btn btn-danger">Purchase Now</div>
+        <hr>
+        <div class="pt-4">
+            <div class="bg-secondary bg-opacity-10 p-4">
+                <div class="row align-items-center">
+                    <div class="col-8 col-md-9">
+                        <div class="h5 text-primary-emphasis">Creative & Unique <span class="fw-bold">Sixteen</span> Products</div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laborum, exercitationem delectus obcaecati tempora doloremque!</div>
+                    </div>
+                    <div class="col-4 col-md-3 text-end">
+                        <div class="btn btn-danger">Purchase Now</div>
+                    </div>
                 </div>
             </div>
         </div>
