--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <a href="img/slide_01.jpg" data-fancybox="gallery" data-caption="slide-02">
+                        <a href="img/slide_01.jpg" data-fancybox="gallery" data-caption="slide-01">
                             <img src="img/slide_01.jpg" alt="" class="img-fluid">
                         </a>
                     </li>
                     <li class="splide__slide">
-                        <a href="img/slide_02.jpg" data-fancybox="gallery" data-caption="slide-01">
+                        <a href="img/slide_02.jpg" data-fancybox="gallery" data-caption="slide-02">
                             <img src="img/slide_02.jpg" alt="" class="img-fluid">
                         </a>
                     </li>
@@ -113,7 +113,9 @@
                 <ul class="splide__list">
                     <li class="splide__slide">
                         <div class="border">
-                            <div><img src="img/product_01.jpg" alt="" class="img-fluid"></div>
+                            <a href="img/product_01.jpg" data-fancybox="gallery">
+                                <img src="img/product_01.jpg" alt="" class="img-fluid">
+                            </a>
                             <div class="p-3">
                                 <div class="row g-2 g-md-4">
                                     <div class="col-8 text-primary-emphasis h5">
@@ -137,7 +139,9 @@
                     </li>
                     <li class="splide__slide">
                         <div class="border">
-                            <div><img src="img/product_02.jpg" alt="" class="img-fluid"></div>
+                            <a href="img/product_02.jpg" data-fancybox="gallery">
+                                <img src="img/product_02.jpg" alt="" class="img-fluid">
+                            </a>
                             <div class="p-3">
                                 <div class="row">
                                     <div class="col-8 text-primary-emphasis h5">
@@ -161,7 +165,9 @@
                     </li>
                     <li class="splide__slide">
                         <div class="border">
-                            <div><img src="img/product_03.jpg" alt="" class="img-fluid"></div>
+                            <a href="img/product_03.jpg" data-fancybox="gallery">
+                                <img src="img/product_03.jpg" alt="" class="img-fluid">
+                            </a>
                             <div class="p-3">
                                 <div class="row">
                                     <div class="col-8 text-primary-emphasis h5">
@@ -185,7 +191,9 @@
                     </li>
                     <li class="splide__slide">
                         <div class="border">
-                            <div><img src="img/product_04.jpg" alt="" class="img-fluid"></div>
+                            <a href="img/product_04.jpg" data-fancybox="gallery">
+                                <img src="img/product_04.jpg" alt="" class="img-fluid">
+                            </a>
                             <div class="p-3">
                                 <div class="row">
                                     <div class="col-8 text-primary-emphasis h5">
@@ -209,7 +217,9 @@
                     </li>
                     <li class="splide__slide">
                         <div class="border">
-                            <div><img src="img/product_05.jpg" alt="" class="img-fluid"></div>
+                            <a href="img/product_05.jpg" data-fancybox="gallery">
+                                <img src="img/product_05.jpg" alt="" class="img-fluid">
+                            </a>
                             <div class="p-3">
                                 <div class="row">
                                     <div class="col-8 text-primary-emphasis h5">
@@ -233,7 +243,9 @@
                     </li>
                     <li class="splide__slide">
                         <div class="border">
-                            <div><img src="img/product_06.jpg" alt="" class="img-fluid"></div>
+                            <a href="img/product_06.jpg" data-fancybox="gallery">
+                                <img src="img/product_06.jpg" alt="" class="img-fluid">
+                            </a>
                             <div class="p-3">
                                 <div class="row">
                                     <div class="col-8 text-primary-emphasis h5">
@@ -303,7 +315,9 @@
                     <div class="btn btn-danger">Read More</div>
                 </div>
                 <div class="col-10 col-md-6">
-                    <div><img src="img/feature-image.jpg" alt="" class="img-fluid"></div>
+                    <a href="img/feature-image.jpg" data-fancybox="gallery">
+                        <img src="img/feature-image.jpg" alt="" class="img-fluid">
+                    </a>
                 </div>
             </div>
         </div>
