--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/splide.min.css">
     <link rel="stylesheet" href="css/fancybox.css">
+    <link rel="stylesheet" href="css/font.css">
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/aos.js"></script>
@@ -18,9 +19,8 @@
     <script src="js/fancybox.umd.js"></script>
 
     <style>
-        .klassy-font {
-            font-family: 'DancingScript', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: medium;
+        .font-coiny {
+            font-family: 'coiny', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
 
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Ninth navbar example">
         <div class="container-xl">
-            <a class="navbar-brand fw-bold" href="#">SIXTEEN <span class="text-danger">CLOTHING</span> </a>
+            <a class="navbar-brand fw-bold font-coiny" href="#">SIXTEEN <span class="text-danger">CLOTHING</span> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
