--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     perPage: 1,
                     perMove: 1,
                     autoplay: true,
-                    interval: 5000,
+                    interval: 5e3,
                     arrows: false,
                 }).mount();
             });
@@ -274,6 +274,8 @@
             var splide = new Splide('#splide-product', {
                 type: 'loop',
                 padding: '6rem',
+                autoplay: true,
+                interval: 5e3,
                 perPage: 3,
                 perMove: 1,
                 gap: '1.5rem',
