--- a/index.html
+++ b/index.html
@@ -305,19 +305,19 @@
         <div class="pt-4">
             <div class="row justify-content-center align-items-center g-5">
                 <div class="col-md-6">
-                    <div class="h5 text-primary-emphasis">Looking for the best products?</div>
-                    <div><span class="text-primary">Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Cumque dolorem eos quasi similique inventore optio quod <span class="text-primary">nostrum possimus</span> enim saepe!</div>
+                    <div class="h5 text-primary-emphasis" data-aos="fade-in" data-aos-duration="4000">Looking for the best products?</div>
+                    <div data-aos="fade-in" data-aos-duration="4000"><span class="text-primary">Lorem ipsum dolor</span> sit amet consectetur adipisicing elit. Cumque dolorem eos quasi similique inventore optio quod <span class="text-primary">nostrum possimus</span> enim saepe!</div>
                     <ul class="py-3 lh-lg">
-                        <li data-aos="fade-up">Lorem ipsum dolor sit amet.</li>
-                        <li data-aos="fade-up">Lorem ipsum dolor sit amet.</li>
-                        <li data-aos="fade-up">Lorem ipsum dolor sit amet.</li>
-                        <li data-aos="fade-up">Lorem ipsum dolor sit amet.</li>
-                        <li data-aos="fade-up">Lorem ipsum dolor sit amet.</li>
+                        <li data-aos="fade-in" data-aos-duration="4000">Lorem ipsum dolor sit amet.</li>
+                        <li data-aos="fade-in" data-aos-duration="4000">Lorem ipsum dolor sit amet.</li>
+                        <li data-aos="fade-in" data-aos-duration="4000">Lorem ipsum dolor sit amet.</li>
+                        <li data-aos="fade-in" data-aos-duration="4000">Lorem ipsum dolor sit amet.</li>
+                        <li data-aos="fade-in" data-aos-duration="4000">Lorem ipsum dolor sit amet.</li>
                     </ul>
-                    <div class="btn btn-danger">Read More</div>
+                    <div class="btn btn-danger" data-aos="fade-in" data-aos-duration="4000"><a href="#" class="text-light text-decoration-none">Read More</a></div>
                 </div>
                 <div class="col-10 col-md-6">
-                    <a href="img/feature-image.jpg" data-fancybox="gallery">
+                    <a href="img/feature-image.jpg" data-aos="fade-in" data-aos-duration="4000" data-fancybox="gallery">
                         <img src="img/feature-image.jpg" alt="" class="img-fluid">
                     </a>
                 </div>
@@ -328,14 +328,14 @@
     <div class="container py-5">
         <hr>
         <div class="pt-4">
-            <div class="bg-secondary bg-opacity-10 p-4" data-aos="fade-up">
+            <div class="bg-secondary bg-opacity-10 p-4">
                 <div class="row align-items-center">
                     <div class="col-8 col-md-9">
-                        <div class="h5 text-primary-emphasis" data-aos="fade-up">Creative & Unique <span class="fw-bold">Sixteen</span> Products</div>
-                        <div data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laborum, exercitationem delectus obcaecati tempora doloremque!</div>
+                        <div class="h5 text-primary-emphasis">Creative & Unique <span class="fw-bold">Sixteen</span> Products</div>
+                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod laborum, exercitationem delectus obcaecati tempora doloremque!</div>
                     </div>
                     <div class="col-4 col-md-3 text-end">
-                        <div class="btn btn-danger" data-aos="fade-up">Purchase Now</div>
+                        <div class="btn btn-danger"><a href="#" class="text-light text-decoration-none">Purchase Now</div>
                     </div>
                 </div>
             </div>
