--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="#">Our Products</a>
+                        <a class="nav-link active" aria-current="page" href="#products">Our Products</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="#">About Us</a>
+                        <a class="nav-link active" aria-current="page" href="#us">About Us</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -96,7 +96,7 @@
 
     </div>
 
-    <div class="container py-5">
+    <div class="container py-5" id="products">
         <div class="row">
             <div class="col text-start">
                 <div class="h2">Latest Products</div>
@@ -297,7 +297,7 @@
         </script>
     </div>
 
-    <div class="container">
+    <div class="container" id="us">
         <div class="h2">About Sixteen Clothing</div>
 
         <hr>
@@ -325,7 +325,7 @@
         </div>
     </div>
 
-    <div class="container py-5">
+    <div class="container py-5" id="contact">
         <hr>
         <div class="pt-4">
             <div class="bg-secondary bg-opacity-10 p-4">
